--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_module/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
